@@ -1,2 +1,2 @@
 # -*- mode: cmake -*-
-# CMake/common https://github.com/Eyescale/CMake.git cbe6d84
+# CMake/common https://github.com/Eyescale/CMake.git 8b630a6
