@@ -1,2 +1,2 @@
 # -*- mode: cmake -*-
-git_subproject(Servus https://github.com/HBPVIS/Servus.git bcdeed6)
+git_subproject(Servus https://github.com/HBPVIS/Servus.git 47ea29d)
