@@ -1,6 +1,10 @@
 
 This file lists all changes in the public Lunchbox API, latest on top:
 
+29/Jun/2015
+  Deprecated WARN log level. Introduced DEBUG log level. Promoted INFO
+  to be default-visible in release builds.
+
 15/Feb/2013
   lunchbox::searchDirectory uses boost::regex for pattern matching. This
   changes the behaviour of this function, e.g.,
